--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="utf-8" />
-
-    <title>React App</title>
+    <title>RED TETRIS</title>
+    <link rel="icon" href="./tetris-logo.png" />
+    <link rel="manifest" href="./manifest.json">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
 <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
