--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" href="./tetris-logo.png" />
     <link rel="manifest" href="./manifest.json">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- <script>
+        window.setImmediate = window.setTimeout;
+    </script> -->
 </head>
 
 <body>
